# libopenbeard

./: CMakeLists.txt  LICENSE.md  README.md  main.cpp
libopenbeard/: OpenBeardFunc.cpp  OpenBeardFunc.h
